--- a/public/accelerator_dashboard/stakeholder_management/modules/profile/index.html
+++ b/public/accelerator_dashboard/stakeholder_management/modules/profile/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfoliomate / Complete Profile</title>
     <link rel="icon" type="image/x-icon" href="../../../../assets/portfoliomate.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
@@ -21,6 +22,7 @@
         crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
     <script src="../../../../configurations/local_dbfunctions.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -120,7 +122,32 @@
                                                 <div id="add_people_button" onclick="addperson()" class="btn">Add Person</div>
                                             </div>
                                         </div>
+                                        <div class="select-input-type">
+                                            <select class="form-select" id="user_type_select" aria-label="Default select example">
+                                                <option value="new_user">New User</option>
+                                                <option value="existing_user">Existing User</option>
+                                              </select>
+                                        </div>
                                     </form>
+                                    <div id="existing_user_modal" class="modal" tabindex="-1" role="dialog">
+                                        <div class="modal-dialog" role="document">
+                                          <div class="modal-content">
+                                            <div class="modal-header">
+                                              <h5 class="modal-title">Modal title</h5>
+                                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                              </button>
+                                            </div>
+                                            <div class="modal-body">
+                                              <p>Modal body text goes here.</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                              <button type="button" class="btn btn-primary">Save changes</button>
+                                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
                                 </div>
                                 <div class="col-md-8 order-md-2">
                                     <h4 class="mb-3">Basic Details</h4>
@@ -221,15 +248,17 @@
                                                         <div class="input-group-prepend">
                                                             <span class="input-group-text">Address</span>
                                                         </div>
-                                                        <textarea class="form-control" name="address"
+                                                        <textarea type="text" class="form-control" name="address"
                                                             aria-label="With textarea"></textarea>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </form>
-                                    <button type="submit" style="margin-top: 1vh;"
+                                    <button id="submit" type="submit" style="margin-top: 1vh;"
                                         class="btn btn-primary">Submit</button>
+                                    <button id="check" type="submit" style="margin-top: 1vh;"
+                                    class="btn btn-primary">Check</button> 
                                 </div>
                             </div>
 
