--- a/public/accelerator_dashboard/stakeholder_management/modules/profile/index.html
+++ b/public/accelerator_dashboard/stakeholder_management/modules/profile/index.html
@@ -139,7 +139,7 @@
                                               </button>
                                             </div>
                                             <div class="modal-body">
-                                              <p>Modal body text goes here.</p>
+                                                <ul id="stakeholders_people_list" style="display: none;" class="list-group mb-3">
                                             </div>
                                             <div class="modal-footer">
                                               <button type="button" class="btn btn-primary">Save changes</button>
@@ -151,7 +151,7 @@
                                 </div>
                                 <div class="col-md-8 order-md-2">
                                     <h4 class="mb-3">Basic Details</h4>
-                                    <form id="#complete_startup_fundamental_details_form">
+                                    <form name="Form" id="#complete_startup_fundamental_details_form">
                                         <div>
                                             <div class="card">
                                                 <div class="card-body">
@@ -171,7 +171,7 @@
                                                         <div class="input-group-prepend">
                                                             <span class="input-group-text" id="basic-addon1">CIN</span>
                                                         </div>
-                                                        <input type="text" class="form-control" name="cin"
+                                                        <input type="text" class="form-control" id="cin" name="cin"
                                                             placeholder="Enter CIN" aria-label="Username"
                                                             aria-describedby="basic-addon1">
                                                     </div>
@@ -201,7 +201,7 @@
                                                             <span class="input-group-text" id="basic-addon1">Brand
                                                                 Name</span>
                                                         </div>
-                                                        <input type="text" class="form-control" name="brand_name"
+                                                        <input type="text" id="brand_name" class="form-control" name="brand_name"
                                                             placeholder="Enter Brand Name" aria-label="Username"
                                                             aria-describedby="basic-addon1">
                                                     </div>
@@ -211,7 +211,7 @@
                                                             <span class="input-group-text"
                                                                 id="basic-addon1">Website</span>
                                                         </div>
-                                                        <input type="text" class="form-control" name="website"
+                                                        <input type="text" id="website" class="form-control" name="website"
                                                             placeholder="Enter Brand Name" aria-label="Username"
                                                             aria-describedby="basic-addon1">
                                                     </div>
@@ -230,7 +230,7 @@
                                                         <div class="input-group-prepend">
                                                             <span class="input-group-text">Description</span>
                                                         </div>
-                                                        <textarea class="form-control" name="description"
+                                                        <textarea id="description" class="form-control" name="description"
                                                             aria-label="With textarea"></textarea>
                                                     </div>
 
@@ -239,7 +239,7 @@
                                                             <span class="input-group-text"
                                                                 id="basic-addon1">Pincode</span>
                                                         </div>
-                                                        <input type="text" class="form-control" name="pincode"
+                                                        <input type="text" id="pincode" class="form-control" name="pincode"
                                                             placeholder="Enter PIN" aria-label="Username"
                                                             aria-describedby="basic-addon1">
                                                     </div>
@@ -248,7 +248,7 @@
                                                         <div class="input-group-prepend">
                                                             <span class="input-group-text">Address</span>
                                                         </div>
-                                                        <textarea type="text" class="form-control" name="address"
+                                                        <textarea type="text" id="address" class="form-control" name="address"
                                                             aria-label="With textarea"></textarea>
                                                     </div>
                                                 </div>
@@ -256,7 +256,7 @@
                                         </div>
                                     </form>
                                     <button id="submit" type="submit" style="margin-top: 1vh;"
-                                        class="btn btn-primary">Submit</button>
+                                        class="btn btn-primary" disabled>Submit</button>
                                     <button id="check" type="submit" style="margin-top: 1vh;"
                                     class="btn btn-primary">Check</button> 
                                 </div>
