--- a/public/accelerator_dashboard/stakeholder_management/modules/profile/index.html
+++ b/public/accelerator_dashboard/stakeholder_management/modules/profile/index.html
@@ -138,8 +138,8 @@
                                                 <span aria-hidden="true">&times;</span>
                                               </button>
                                             </div>
-                                            <div class="modal-body">
-                                                <ul id="stakeholders_people_list" style="display: none;" class="list-group mb-3">
+                                            <div class="modal-body" id="populate_stake_holders">
+                                                <ul id="populate_existing_people"  class="list-group mb-3"></ul>
                                             </div>
                                             <div class="modal-footer">
                                               <button type="button" class="btn btn-primary">Save changes</button>
@@ -148,6 +148,9 @@
                                           </div>
                                         </div>
                                       </div>
+
+
+                                     
                                 </div>
                                 <div class="col-md-8 order-md-2">
                                     <h4 class="mb-3">Basic Details</h4>
