--- a/public/accelerator_dashboard/stakeholder_management/modules/profile/index.html
+++ b/public/accelerator_dashboard/stakeholder_management/modules/profile/index.html
@@ -137,13 +137,13 @@
                                               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                 <span aria-hidden="true">&times;</span>
                                               </button>
+
                                             </div>
                                             <div class="modal-body" id="populate_stake_holders">
                                                 <ul id="populate_existing_people"  class="list-group mb-3"></ul>
                                             </div>
                                             <div class="modal-footer">
-                                              <button type="button" class="btn btn-primary">Save changes</button>
-                                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                              <button type="button" onclick=close_modal() class="btn btn-secondary" data-dismiss="modal">Close</button>
                                             </div>
                                           </div>
                                         </div>
