working file and object upload

--- a/public/onboarding/index.html
+++ b/public/onboarding/index.html
@@ -255,8 +255,7 @@
                   </div>
                   
 
-                    <a href="#" class="btn btn-primary" id="submit_stakeholder" style="float: right; display: none;
-                    background: #3342AE!important;" onclick="proceed_pressed()">Proceed</a>
+                    <a href="#" class="btn btn-primary" id="submit_stakeholder" style="float: right; display: none; background: #3342AE!important;" onclick="proceed_pressed()">Proceed</a>
                 </div>
             </div>
         </div>
