--- a/public/accelerator_dashboard/stakeholder_management/index.html
+++ b/public/accelerator_dashboard/stakeholder_management/index.html
@@ -106,7 +106,8 @@
                                 Investor [ Fund / VC / PE ]
                                 <span class="badge badge-pill investor-pill"></span>
                             </li>
-                            <li class="list-group-item justify-content-between align-items-center" onclick="stakeholder_selected('innovador')">
+                            <li class="list-group-item justify-content-between align-items-center"
+                                onclick="stakeholder_selected('innovador')">
                                 <i class="fa-regular fa-folder"></i>
                                 Entreprenuer / Innovator
                                 <span class="badge badge-pill innovador-pill"></span>
@@ -232,20 +233,22 @@
                                     </div>
                                 </div>
                             </div>
-                            <table id="investor_table" class="table table-hover stakeholder_table">
-                                <thead>
-                                    <tr>
-                                        <th>Company</th>
-                                        <th>Sector</th>
-                                        <th>Location</th>
-                                        <th>Status</th>
-                                        <th></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
+                            <div class="table-wrap">
+                                <table id="investor_table" class="table table-hover stakeholder_table">
+                                    <thead>
+                                        <tr>
+                                            <th>Company</th>
+                                            <th>Sector</th>
+                                            <th>Location</th>
+                                            <th>Status</th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
 
-                                </tbody>
-                            </table>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
 
 
@@ -432,9 +435,8 @@
         $('document').ready(function () {
 
 
-            if (is_logged_in()) 
-            {
-                
+            if (is_logged_in()) {
+
                 setup_stakeholder_management_operator_module(true, []);
                 //align_stakeholder_object();
                 /*
