Kanban static page added

--- a/public/accelerator_dashboard/stakeholder_management/index.html
+++ b/public/accelerator_dashboard/stakeholder_management/index.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="menu_item_divider"></div>
-            <div class="main_menu_item inactive">
+            <div class="main_menu_item active">
                 <i style="font-size: xx-large;" class="fa-solid fa-cubes-stacked"></i>
                 <div class="label">Work</div>
             </div>
