engagemenet population initial m kanban added

--- a/public/accelerator_dashboard/stakeholder_management/modules/profile/index.html
+++ b/public/accelerator_dashboard/stakeholder_management/modules/profile/index.html
@@ -1550,6 +1550,8 @@
                               </div>
                             </div>
 
+                            <!-- YUVRAJ START HERE -->
+
                             <div class="card mt-4">
                               <div class="card-body">
                                 <div
@@ -1678,6 +1680,10 @@
                                       </div>
                                     </div>
                                   </div>
+
+                                  <ul
+                                    class="single_mandate"
+                                    id="single_mandate_area"></ul>
                                 </div>
                               </div>
                               <ul id="exisisting-mandate_files"></ul>
@@ -1799,12 +1805,12 @@
                               </div>
                             </div>
 
-                            <div class="card mt-4">
+                            <!-- <div class="card mt-4">
                               <div class="card-body">
                                 <div
                                   class="header d-flex justify-items-space-between flex-row">
                                   <h4 class="card-title">Add investors</h4>
-                                  <!-- Button trigger modal -->
+                                  Button trigger modal
 
                                   <button
                                     type="button"
@@ -1815,7 +1821,7 @@
                                   </button>
                                 </div>
                                 <div class="main-body">
-                                  <!-- Modal -->
+                                      Modal
 
                                   <div
                                     class="modal fade"
@@ -1876,7 +1882,7 @@
                                   </div>
                                 </div>
                               </div>
-                            </div>
+                            </div> -->
                           </div>
                           <button
                             id=""
