--- a/public/accelerator_dashboard/stakeholder_management/modules/profile/index.html
+++ b/public/accelerator_dashboard/stakeholder_management/modules/profile/index.html
@@ -1428,9 +1428,9 @@
                                     <span class="input-group-text">Ask</span>
                                     <select
                                       class="form-select"
-                                      id="ask_currency"
+                                      id="ask_currency-disabled"
                                       aria-label="Default select example">
-                                      <option value="Rupee" id="rupee" selected>
+                                      <option value="Rupee" id="rupee">
                                         ₹
                                       </option>
                                       <option value="Dollar" id="Dollar">
@@ -1441,7 +1441,7 @@
                                   </div>
                                   <input
                                     type="number"
-                                    id="ask_evaluation"
+                                    id="ask_evaluation-disabled"
                                     class="form-control"
                                     aria-label="Rupee amount (with dot and two decimal places)"
                                     required />
@@ -1454,9 +1454,9 @@
                                     </span>
                                     <select
                                       class="form-select"
-                                      id="evaluation_currency"
+                                      id="evaluation_currency-disabled"
                                       aria-label="Default select example">
-                                      <option value="Rupee" id="Rupee" selected>
+                                      <option value="Rupee" id="Rupee">
                                         ₹
                                       </option>
                                       <option value="Dollar" id="Dollar">
@@ -1467,7 +1467,7 @@
                                   </div>
                                   <input
                                     type="number"
-                                    id="expected_evaluation"
+                                    id="expected_evaluation-disabled"
                                     class="form-control"
                                     aria-label="Rupee amount (with dot and two decimal places)"
                                     required />
@@ -1480,7 +1480,7 @@
                                     >
                                     <input
                                       type="date"
-                                      id="date_as_on"
+                                      id="date_as_on-disabled"
                                       class="form-control"
                                       aria-label="Date as of from now"
                                       required />
@@ -1499,12 +1499,12 @@
                                           type="radio"
                                           name="fees_type"
                                           value="fees"
-                                          id="fees" />
+                                          id="fees_options-disabled" />
                                         <label
                                           class="form-check-label"
                                           id="fees-input"
                                           for="fees">
-                                          Fees
+                                          <b>Fees</b>
                                         </label>
                                       </div>
                                       <div class="form-check ml-5">
@@ -1518,7 +1518,7 @@
                                           class="form-check-label"
                                           id="equity-input"
                                           for="equity">
-                                          Equity
+                                          <b>Equity</b>
                                         </label>
                                       </div>
                                     </div>
@@ -1527,11 +1527,9 @@
                                       <input
                                         type="number"
                                         class="form-control"
-                                        placeholder="Enter the amount here"
-                                        onchange="handlePaymentAmount(event)"
-                                        id="fees_amount" />
-                                      <label for="fees_amount"
-                                        >Enter the Amount</label
+                                        id="fees_amount-disabled" />
+                                      <label for="fees_amount-disabled"
+                                        >Amount</label
                                       >
                                     </div>
                                     <div class="form-floating">
@@ -1540,9 +1538,9 @@
                                         rows="20"
                                         class="form-control"
                                         onchange="handlePaymentDescription(event)"
-                                        id="fees_comments"></textarea>
+                                        id="fees_comments-disabled"></textarea>
                                       <label for="fees_comments"
-                                        >Enter any Comments</label
+                                        >Comments</label
                                       >
                                     </div>
                                   </div>
@@ -1562,6 +1560,7 @@
                                     type="button"
                                     class="btn btn-primary"
                                     data-toggle="modal"
+                                    id="add_mandate_button-disabled"
                                     data-target="#addMandateModal">
                                     Add Mandate
                                   </button>
@@ -1896,7 +1895,7 @@
                             type=""
                             style="margin-top: 1vh"
                             class="btn btn-primary"
-                            onclick="handleObject()">
+                            onclick="handleObjectUpdate()">
                             Check
                           </p>
                         </form>
