--- a/public/accelerator_dashboard/stakeholder_management/modules/profile/index.html
+++ b/public/accelerator_dashboard/stakeholder_management/modules/profile/index.html
@@ -1415,6 +1415,80 @@
                             </div>
                           </div>
                         </div>
+                      
+                      <!-- Exclusion vala part -->
+                      
+                        <div
+                          class="d-flex justify-content-between align-items-center mb-3">
+                          <h5 class="text-muted">Exclusion List</h5>
+                          <button
+                            type="button"
+                            class="btn btn-primary"
+                            onclick="exclusion_investor_Modal()"
+                            data-bs-toggle="modal"
+                            data-bs-target="#exclusion_investor_modal">
+                            exclude investor
+                          </button>
+                        </div>
+
+                        <ul id="stakeholders_no_people" class="list-group mb-3">
+                          <li
+                            class="list-group-item d-flex justify-content-between lh-condensed">
+                            <div>
+                              <h6 class="my-0" style="color: crimson">
+                                No Accounts Excluded
+                              </h6>
+                              <small class="text-muted"
+                                >Add investors you want to Exclude</small
+                              >
+                            </div>
+                          </li>
+                        </ul>
+
+                        <ul
+                          id="stakeholders_people_list"
+                          style="display: none"
+                          class="list-group mb-3"></ul>
+
+                        <div
+                          class="modal fade"
+                          id="exclusion_investor_modal"
+                          tabindex="-1"
+                          aria-labelledby="exampleModalLabel"
+                          aria-hidden="true">
+                          <div class="modal-dialog">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h1
+                                  class="modal-title fs-5"
+                                  id="exampleModalLabel">
+                                  Investors
+                                </h1>
+                                <button
+                                  type="button"
+                                  class="btn-close"
+                                  data-bs-dismiss="modal"
+                                  aria-label="Close"></button>
+                              </div>
+                              <div class="modal-body">
+                                <ul
+                                  id="populate_Exclusion_investor_modal"
+                                  class="list-group mb-3">
+                                  <li>Exclude Test</li>
+                                </ul>
+                              </div>
+                              <div class="modal-footer">
+                                <button
+                                  type="button"
+                                  class="btn btn-secondary"
+                                  data-bs-dismiss="modal">
+                                  Close
+                                </button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
                       </div>
                       <div
                         class="disabled-form_group-container col-md-8 order-md-2">
