kanban issue solved

--- a/public/accelerator_dashboard/stakeholder_management/modules/kanbanBoard/index.html
+++ b/public/accelerator_dashboard/stakeholder_management/modules/kanbanBoard/index.html
@@ -93,13 +93,7 @@
                 </div>
                 <div class="container">
                     <div id="kanban-board-holder">
-
-                        <div class="status-holders">
-
-                            <div class="status-header" id="notApproached-header">
-                                <div>Not Approached</div>
-                                <div id="notApproached-addbtn">+</div>
-                            </div>
+ 
 
                         <!-- Modal Approached-->
                         <div class="modal" id="openApproachedModal" tabindex="-1" role="dialog">
@@ -357,7 +351,7 @@
                                     <div class="Approaced-options" onclick="displayOptions_Approached()">&#10247;</div>
                                     <div id="dropdown-menu-Approached" style="display:none">
                                         <h6 class="dropdown-header">Move to</h6>
-                                        <!-- <a class="dropdown-item" href="#">Approached</a> -->
+                                         <a class="dropdown-item" href="#">Approached</a>
                                         <a class="dropdown-item" href="#">Interested</a>
                                         <a class="dropdown-item" href="#">Not Interested</a>
                                         <a class="dropdown-item" href="#">Meeting Scheduled</a>
@@ -388,7 +382,7 @@
                                     </div>
                                 </div>
 
-                            </div> -->
+                            </div>  -->
                             </ul>
                         </div>
                         <div class="status-holders">
