--- a/public/accelerator_dashboard/stakeholder_management/index.html
+++ b/public/accelerator_dashboard/stakeholder_management/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -436,8 +437,8 @@
 
         
         $('#work_icon').click(function () {
-            alert("hello There")
-            location.href = "../stakeholder_management/modules/kanbanBoard/index.html"
+            console.log("hello There")
+            location.href = "../stakeholder_management/modules/kanbanBoard/index2.html"
         });
         $('document').ready(function () {
 
